updated events page wwek of 1/23

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 16 January 2017</span>
+                                        <span class="data">Last Updated: 22 January 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -117,21 +117,29 @@
 							 <ul class="tales-list">
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">1/17: Faculty Recital: Randy Grabowski, trumpet, Bengtson Auditorium, Russell Hall, Tuesday, January 17, 2017 - 7:30 pm</a></li>
-								<li>1/18: Wheaton Wellness Session: Technology and Wellness, Room 009, Gilchrist Hall, Wednesday, January 18, 2017 - 12:00 pm</li>
-								<li>1/18: Camp Adventure PLAC, Room 112, Human Performance Center, Wednesday, January 18, 2017 - 5:00 pm to 8:00 pm</li>
-								<li><a href="http://www.uni.edu/art/gallery.html">1/18: Artist Lecture: Allyson Comstock, KAB 111, Wednesday, January 18, 2017 - 6:00 pm</a></li>
-								<li>1/18: UNI Men's Basketball vs. Loyola, McLeod Center, Wednesday, January 18, 2017 - 7:00 pm</li>
-								<li>1/18: Sorority Bingo Night, Old Central Ballroom, Maucker Union, Wednesday, January 18, 2017 - 7:30 pm</li>
-								<li><a href="https://www.library.uni.edu/events/2017-01/jjeffrey-messerole-concert">1/19: J.Jeffrey Messerole Concert, UNI Museum, first floor, Rod Library, Thursday, January 19, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/19: Planetarium Show, Room 105, Latham Hall, Thursday, January 19, 2017 - 7:00 pm to 7:40 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/19: Planetarium Show, Room 105, Latham Hall, Thursday, January 19, 2017 - 8:00 pm to 8:40 pm</a></li>
-								<li>1/20: UNI Swimming &amp; Diving vs. Illinois State, Glen F. Henry Swimming &amp; Diving Pool (WRC), Friday, January 20, 2017 - 5:00 pm</li>
-								<li>1/20: UNI Women's Basketball vs. Indiana State, McLeod Center, Friday, January 20, 2017 - 7:00 pm</li>
-								<li><a href="https://uni.edu/uncommon-sense/">1/21: Uncommon Sense, Gallagher Bluedorn Performing Arts Center, Saturday, January 21, 2017 - 7:00 pm</a></li>
-								<li><a href="https://uni.edu/uncommon-sense/">1/22: Uncommon Sense, Gallagher Bluedorn Performing Arts Center, Sunday, January 22, 2017 - 2:00 pm</a></li>
-								<li>1/22: UNI Women's Basketball vs. Loyola, McLeod Center, Sunday, January 22, 2017 - 2:00 pm</li>
-								<li>1/22: UNI Wrestling vs. Eastern Michigan, West Gym, Sunday, January 22, 2017 - 2:00 pm</li>
+								<li><a href="https://www.facebook.com/events/246235325802268/">ALL WEEK: Dance Marathon Dancer Appreciation Week, NA, Sunday, January 22, 2017 - 2:00 pm to Saturday, January 28, 2017 - 2:00 pm</a></li>
+								<li><a href="http://www.grad.uni.edu/poster-presentation-professional-conferences">1/23: Preparing and Presenting Poster Presentations at Professional Conferences, Room 287, Rod Library, Monday, January 23, 2017 -1:00 pm to 1:50 pm</a></li>
+								<li>1/23: Presentation by ISSO associate director candidate, Elm Room, Maucker Union, Monday, January 23, 2017 - 3:15 pm</li>
+								<li>1/23: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, January 23, 2017 - 5:00 pm to 9:00 pm</li>
+								<li><a href="https://uni.edu/newsroom/uni-to-commemorate-martin-luther-king-jr">1/23: Dr. Martin Luther King, Jr. Commemoration, Auditorium, Lang Hall, Monday, January 23, 2017 - 7:00 pm</a></li>
+								<li>1/24: Green Zone training, State College Room, Maucker Union, Tuesday, January 24, 2017 - 10:00 am to 11:30 am</li>
+								<li><a href="http://studyabroad.uni.edu/index.cfm?FuseAction=Abroad.ViewLink&Parent_ID=0&Link_ID=FD93CB0F-5056-BA1F-71BE34B5B61BC2F4">1/25: Study Abroad Fair, Old Central Ballroom, Maucker Union, Wednesday, January 25, 2017 - 11:00 am to 3:00 pm</a></li>
+								<li>1/25: EAP Session: Finding Life/Work Balance, Room 009, Gilchrist Hall, Wednesday, January 25, 2017 - 3:00 pm</li>
+								<li>1/25: UNI Men's Basketball vs. Evansville, McLeod Center, Wednesday, January 25, 2017 - 7:00 pm</li>
+								<li>1/26: Presentation by ISSO associate director candidate, State College Room, Maucker Union, Thursday, January 26, 2017 - 1:45 pm</li>
+								<li><a href="http://www.uni.edu/music/events">1/26: Faculty Recital: Jesse Orth, tuba, Davis Hall, GBPAC, Thursday, January 26, 2017 - 6:00 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-743/postmodern-jukebox.aspx?utm_source=Social&utm_campaign=PMJ&utm_medium=Facebook&utm_content=onsale">1/26: Postmodern Jukebox at Gallagher Bluedorn, Gallagher Bluedorn Performing Arts Center, Thursday, January 26, 2017 - 7:00 pm</a></li>
+								<li><a href="https://www.uni.edu/langlit/news/final-thursday-reading-series-back-2017">1/26: Final Thursday Reading Series featuring Dave Hoing &amp; Roger Hileman, Hearst Center for the Arts, Thursday, January 26, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/26: Planetarium Show, Room 105, Latham Hall, Thursday, January 26, 2017 - 7:00 pm to 7:40 pm</a></li>
+								<li><a href="https://www.facebook.com/events/242304986208542/">1/26: Artist Lecture: Mark Dion, UNI Dept. of Art, KAB 111, Thursday, January 26, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">1/26: Guest Recital: Pavel Suliandziga, tenor, Davis Hall, GBPAC, Thursday, January 26, 2017 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/26: Planetarium Show, Room 105, Latham Hall, Thursday, January 26, 2017 - 8:00 pm to 8:40 pm</a></li>
+								<li>1/26: Dance Marathon 5th Annual Black Tie Affair, Wesley Foundation, Thursday, January 26, 2017 - 8:00 pm to 11:00 pm</li>
+								<li><a href="http://www.kollarfoto.com/">1/27: On Creating a Book: Collaboration, Technology, Gumption, ScholarSpace 301, Rod LIbrary, Friday, January 27, 2017 - 5:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">1/27: Faculty Recital: Randall Harlow and Mariko Morita, organists, Jebe Hall, GBPAC, Friday, January 27, 2017 - 6:00 pm</a></li>
+								<li>1/27: UNI Women's Basketball vs. Drake, McLeod Center, Friday, January 27, 2017 - 7:00 pm</li>
+								<li>1/27: Waterloo Blackhawks Dance Marathon Night, Young Arena, Waterloo, Friday, January 27, 2017 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">1/27: Faculty Recital: Ann Bradfield, saxophone, Davis Hall, GBPAC, Friday, January 27, 2017 - 8:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
