events page for week of 1-30

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 22 January 2017</span>
+                                        <span class="data">Last Updated: 30 January 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -118,28 +118,33 @@
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="https://www.facebook.com/events/246235325802268/">ALL WEEK: Dance Marathon Dancer Appreciation Week, NA, Sunday, January 22, 2017 - 2:00 pm to Saturday, January 28, 2017 - 2:00 pm</a></li>
-								<li><a href="http://www.grad.uni.edu/poster-presentation-professional-conferences">1/23: Preparing and Presenting Poster Presentations at Professional Conferences, Room 287, Rod Library, Monday, January 23, 2017 -1:00 pm to 1:50 pm</a></li>
-								<li>1/23: Presentation by ISSO associate director candidate, Elm Room, Maucker Union, Monday, January 23, 2017 - 3:15 pm</li>
-								<li>1/23: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, January 23, 2017 - 5:00 pm to 9:00 pm</li>
-								<li><a href="https://uni.edu/newsroom/uni-to-commemorate-martin-luther-king-jr">1/23: Dr. Martin Luther King, Jr. Commemoration, Auditorium, Lang Hall, Monday, January 23, 2017 - 7:00 pm</a></li>
-								<li>1/24: Green Zone training, State College Room, Maucker Union, Tuesday, January 24, 2017 - 10:00 am to 11:30 am</li>
-								<li><a href="http://studyabroad.uni.edu/index.cfm?FuseAction=Abroad.ViewLink&Parent_ID=0&Link_ID=FD93CB0F-5056-BA1F-71BE34B5B61BC2F4">1/25: Study Abroad Fair, Old Central Ballroom, Maucker Union, Wednesday, January 25, 2017 - 11:00 am to 3:00 pm</a></li>
-								<li>1/25: EAP Session: Finding Life/Work Balance, Room 009, Gilchrist Hall, Wednesday, January 25, 2017 - 3:00 pm</li>
-								<li>1/25: UNI Men's Basketball vs. Evansville, McLeod Center, Wednesday, January 25, 2017 - 7:00 pm</li>
-								<li>1/26: Presentation by ISSO associate director candidate, State College Room, Maucker Union, Thursday, January 26, 2017 - 1:45 pm</li>
-								<li><a href="http://www.uni.edu/music/events">1/26: Faculty Recital: Jesse Orth, tuba, Davis Hall, GBPAC, Thursday, January 26, 2017 - 6:00 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-743/postmodern-jukebox.aspx?utm_source=Social&utm_campaign=PMJ&utm_medium=Facebook&utm_content=onsale">1/26: Postmodern Jukebox at Gallagher Bluedorn, Gallagher Bluedorn Performing Arts Center, Thursday, January 26, 2017 - 7:00 pm</a></li>
-								<li><a href="https://www.uni.edu/langlit/news/final-thursday-reading-series-back-2017">1/26: Final Thursday Reading Series featuring Dave Hoing &amp; Roger Hileman, Hearst Center for the Arts, Thursday, January 26, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/26: Planetarium Show, Room 105, Latham Hall, Thursday, January 26, 2017 - 7:00 pm to 7:40 pm</a></li>
-								<li><a href="https://www.facebook.com/events/242304986208542/">1/26: Artist Lecture: Mark Dion, UNI Dept. of Art, KAB 111, Thursday, January 26, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">1/26: Guest Recital: Pavel Suliandziga, tenor, Davis Hall, GBPAC, Thursday, January 26, 2017 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">1/26: Planetarium Show, Room 105, Latham Hall, Thursday, January 26, 2017 - 8:00 pm to 8:40 pm</a></li>
-								<li>1/26: Dance Marathon 5th Annual Black Tie Affair, Wesley Foundation, Thursday, January 26, 2017 - 8:00 pm to 11:00 pm</li>
-								<li><a href="http://www.kollarfoto.com/">1/27: On Creating a Book: Collaboration, Technology, Gumption, ScholarSpace 301, Rod LIbrary, Friday, January 27, 2017 - 5:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">1/27: Faculty Recital: Randall Harlow and Mariko Morita, organists, Jebe Hall, GBPAC, Friday, January 27, 2017 - 6:00 pm</a></li>
-								<li>1/27: UNI Women's Basketball vs. Drake, McLeod Center, Friday, January 27, 2017 - 7:00 pm</li>
-								<li>1/27: Waterloo Blackhawks Dance Marathon Night, Young Arena, Waterloo, Friday, January 27, 2017 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events">1/27: Faculty Recital: Ann Bradfield, saxophone, Davis Hall, GBPAC, Friday, January 27, 2017 - 8:00 pm</a></li>
+								<li>1/30: Getting to the Heart of Integrity: Nurturing Vulnerability and Courage, Room 301, Rod Library, Monday, January 30, 2017 - 4:00 pm to 5:00 pm</li>
+								<li>1/30: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, January 30, 2017 - 5:00 pm to 9:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">1/30: Faculty Recital: Jeffrey Funderburk and Sandy Nordahl, electronic music, Bengtson Auditorium, Russell Hall, Monday, January 30, 2017 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">1/30: Faculty Recital: Mitra Sadeghpour, soprano, Davis Hall, GBPAC, Monday, January 30, 2017 - 8:00 pm</a></li>
+								<li>1/31: Career Readiness Day, Rod Library, Learning Commons (2nd Floor),Tuesday, January 31, 2017 - 10:00 am to 1:30 pm</li>
+								<li><a href="http://www.grad.uni.edu/">1/31: Preparing and Presenting Papers/Oral Presentations at Professional Conferences, Room 287, Rod Library, Tuesday, January 31, 2017 - 2:00 pm to 2:50 pm</a></li>
+								<li>1/31: Presentation by ISSO associate director candidate, State College Room, Maucker Union, Tuesday, January 31, 2017 - 2:15 pm</li>
+								<li><a href="http://www.uni.edu/music/events">1/31: Faculty and Student Chamber Music Recital, Davis Hall, GBPAC, Tuesday, January 31, 2017 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">1/31: Faculty Recital: Sean Botkin, piano, Bengtson Auditorium, Russell Hall, Tuesday, January 31, 2017 - 7:30 pm</a></li>
+								<li><a href="https://unialum.org/events/webinar-power-infographic-resume">2/1: Webinar: The Power of the Infographic Resume, Web (It's Online), Wednesday, February 1, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>2/1: Citizenship Film Series: The March, Auditorium, Center for Energy and Environmental Education, Wednesday, February 1, 2017 - 7:00 pm</li>
+								<li>2/2: Presentation by ISSO associate director candidate, Elm Room, Maucker Union, Thursday, February 2, 2017 - 2:15 pm</li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-715/calmus.aspx">2/2: Calmus, Gallagher Bluedorn Performing Arts Center, Thursday, February 2, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/2: Planetarium Show, Room 105, Latham Hall, Thursday, February 2, 2017 - 7:00 pm to 7:40 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/2: Bass Studio Recital, Davis Hall, GBPAC, Thursday, February 2, 2017 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/2: Planetarium Show, Room 105, Latham Hall, Thursday, February 2, 2017 - 8:00 pm to 8:40 pm</a></li>
+								<li><a href="https://uni.edu/cet/events">2/3: Critical Action Research with Educators, Families, and Youth: Expanding Circles of Solidarity, Slife Ballroom, Commons, Friday, February 3, 2017 - 11:00 am</a></li>
+								<li><a href="https://www.uni.edu/langlit/news/oloughlin-book-launch-and-reading">2/4: Release reading by Jim O'Loughlin for 'Dean Dean Dean Dean', Room 081, Bartlett Hall, Friday, February 3, 2017 - 12:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/112829185893820/">2/3: First Friday: Black History Month Celebration and Skate Party, Wellness/Recreation Cener, Friday, February 3, 2017 - 5:30 pm to 9:00 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-716/pippin.aspx">2/3: Pippin, Gallagher Bluedorn Performing Arts Center, Friday, February 3, 2017 - 7:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/157606391405611/">2/3: Film Appreciation Club: 'Casablanca', Room 111, Kamerick Art Building, Friday, February 3, 2017 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/3: Guest Master Class and Recital: Trombones de Costa Rica, Bengtson Auditorium, Russell Hall, Friday, February 3, 2017 - 7:30 pm</a></li>
+								<li>2/4: UNI Men's Basketball vs. Indiana State, McLeod Center, Saturday, February 4, 2017 - 1:00 pm</li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-716/pippin.aspx">2/4: Pippin, Gallagher Bluedorn Performing Arts Center, Saturday, February 4, 2017 - 2:00 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-716/pippin.aspx">2/4: Pippin, Gallagher Bluedorn Performing Arts Center, Saturday, February 4, 2017 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/4: Guest Master Class and Recital: The Iowa Guitar Quartet, Jebe Hall, GBPAC, Saturday, February 4, 2017 - 7:30 pm</a></li>
+								<li>2/5: UNI Wrestling vs. Oklahoma, McLeod Center, Sunday, February 5, 2017 - 12:00 pm</li>
                             </ul>
 						</div>
                     </article>
