--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 30 January 2017</span>
+                                        <span class="data">Last Updated: 2 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/2-1-class-recap.html">2/1/17 We finished sharing research articles and discussed a few of your ideas/plans including the LifeStraw.</a></li>
 								<li><a href="html_bucket_class_recaps/1-30-class-recap.html">1/30/17 You guys shared some of our research articles and we had a lengthy discussion about paying student athletes.</a></li>
 								<li><a href="html_bucket_class_recaps/1-27-class-recap.html">1/27/17 We discussed the pillars, pornography, group speeches, and WeChat. It was quite eventful.</a></li>
 								<li><a href="html_bucket_class_recaps/1-23-class-recap.html">1/23/17 Each group got time to work on their group projects. We will be in the commons Wednesday!</a></li>
