events page updated for week of 2/6

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 30 January 2017</span>
+                                        <span class="data">Last Updated: 5 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -117,34 +117,36 @@
 							 <ul class="tales-list">
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Antarctica: Beyond Ice", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Creative Resilience", UNI Gallery of Art, Monday, January 9, 2017 - 10:00 am to Wednesday, March 1, 2017 - 7:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/246235325802268/">ALL WEEK: Dance Marathon Dancer Appreciation Week, NA, Sunday, January 22, 2017 - 2:00 pm to Saturday, January 28, 2017 - 2:00 pm</a></li>
-								<li>1/30: Getting to the Heart of Integrity: Nurturing Vulnerability and Courage, Room 301, Rod Library, Monday, January 30, 2017 - 4:00 pm to 5:00 pm</li>
-								<li>1/30: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, January 30, 2017 - 5:00 pm to 9:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events">1/30: Faculty Recital: Jeffrey Funderburk and Sandy Nordahl, electronic music, Bengtson Auditorium, Russell Hall, Monday, January 30, 2017 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">1/30: Faculty Recital: Mitra Sadeghpour, soprano, Davis Hall, GBPAC, Monday, January 30, 2017 - 8:00 pm</a></li>
-								<li>1/31: Career Readiness Day, Rod Library, Learning Commons (2nd Floor),Tuesday, January 31, 2017 - 10:00 am to 1:30 pm</li>
-								<li><a href="http://www.grad.uni.edu/">1/31: Preparing and Presenting Papers/Oral Presentations at Professional Conferences, Room 287, Rod Library, Tuesday, January 31, 2017 - 2:00 pm to 2:50 pm</a></li>
-								<li>1/31: Presentation by ISSO associate director candidate, State College Room, Maucker Union, Tuesday, January 31, 2017 - 2:15 pm</li>
-								<li><a href="http://www.uni.edu/music/events">1/31: Faculty and Student Chamber Music Recital, Davis Hall, GBPAC, Tuesday, January 31, 2017 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">1/31: Faculty Recital: Sean Botkin, piano, Bengtson Auditorium, Russell Hall, Tuesday, January 31, 2017 - 7:30 pm</a></li>
-								<li><a href="https://unialum.org/events/webinar-power-infographic-resume">2/1: Webinar: The Power of the Infographic Resume, Web (It's Online), Wednesday, February 1, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>2/1: Citizenship Film Series: The March, Auditorium, Center for Energy and Environmental Education, Wednesday, February 1, 2017 - 7:00 pm</li>
-								<li>2/2: Presentation by ISSO associate director candidate, Elm Room, Maucker Union, Thursday, February 2, 2017 - 2:15 pm</li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-715/calmus.aspx">2/2: Calmus, Gallagher Bluedorn Performing Arts Center, Thursday, February 2, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/2: Planetarium Show, Room 105, Latham Hall, Thursday, February 2, 2017 - 7:00 pm to 7:40 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/2: Bass Studio Recital, Davis Hall, GBPAC, Thursday, February 2, 2017 - 8:00 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/2: Planetarium Show, Room 105, Latham Hall, Thursday, February 2, 2017 - 8:00 pm to 8:40 pm</a></li>
-								<li><a href="https://uni.edu/cet/events">2/3: Critical Action Research with Educators, Families, and Youth: Expanding Circles of Solidarity, Slife Ballroom, Commons, Friday, February 3, 2017 - 11:00 am</a></li>
-								<li><a href="https://www.uni.edu/langlit/news/oloughlin-book-launch-and-reading">2/4: Release reading by Jim O'Loughlin for 'Dean Dean Dean Dean', Room 081, Bartlett Hall, Friday, February 3, 2017 - 12:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/112829185893820/">2/3: First Friday: Black History Month Celebration and Skate Party, Wellness/Recreation Cener, Friday, February 3, 2017 - 5:30 pm to 9:00 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-716/pippin.aspx">2/3: Pippin, Gallagher Bluedorn Performing Arts Center, Friday, February 3, 2017 - 7:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/157606391405611/">2/3: Film Appreciation Club: 'Casablanca', Room 111, Kamerick Art Building, Friday, February 3, 2017 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/3: Guest Master Class and Recital: Trombones de Costa Rica, Bengtson Auditorium, Russell Hall, Friday, February 3, 2017 - 7:30 pm</a></li>
-								<li>2/4: UNI Men's Basketball vs. Indiana State, McLeod Center, Saturday, February 4, 2017 - 1:00 pm</li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-716/pippin.aspx">2/4: Pippin, Gallagher Bluedorn Performing Arts Center, Saturday, February 4, 2017 - 2:00 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-716/pippin.aspx">2/4: Pippin, Gallagher Bluedorn Performing Arts Center, Saturday, February 4, 2017 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events">2/4: Guest Master Class and Recital: The Iowa Guitar Quartet, Jebe Hall, GBPAC, Saturday, February 4, 2017 - 7:30 pm</a></li>
-								<li>2/5: UNI Wrestling vs. Oklahoma, McLeod Center, Sunday, February 5, 2017 - 12:00 pm</li>
+								<li>2/6: CROW Forum: "Teaching While Black - Oh, and a Woman", Room 287, Rod Library, Monday, February 6, 2017 - 12:00 pm</li>
+								<li>2/6: The Power of Social Imagination in Higher Ed: The Role of the Arts in Bridging Community Engagement &amp; Education, Room 378, Rod Library, Monday, February 6, 12:00 pm to 1:00 pm</li>
+								<li>2/6: The Digital Meetup: An Easier Way to Team Teach, Room 378, Rod Library, Monday, February 6 - 3:30 pm to 4:30 pm</li>
+								<li>2/6: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, February 6, 2017 - 5:00 pm</li>
+								<li>2/7: Information Literacy for Graduate Students: Everything a Graduate Student Should Know Before Starting a Research Project, Room 373, Rod Library, Tuesday, February 7, 2017 - 10:00 am to 11:30 am</li>
+								<li><a href="https://uni.co1.qualtrics.com/jfe/form/SV_8AKJQFTP0pbu2i1">2/7: An Introduction to Qualtrics, Bengtson Auditorium, Russell Hall, Tuesday, February 7, 2017 - 2:00 pm</a></li>
+								<li>2/7: Information Literacy for Graduate Students: Everything a Graduate Student Should Know Before Starting a Research Project, Room 373, Rod Library, Tuesday, February 7, 2017 - 6:00 pm to 7:30 pm</li>
+								<li>2/7: Real Community Hot Mic Night, Great Reading Room, Seerley Hall, Tuesday, February 7, 2017 - 7 pm <b>You should go with me. Earn a check plus!!</b></li>
+								<li>2/8: Wheaton Wellness Session: Chronic Pain, Room 009, Gilchrist Hall, Wednesday, February 8, 2017 - 12:00 pm</li>
+								<li><a href="https://uni.co1.qualtrics.com/jfe/form/SV_8AKJQFTP0pbu2i1">2/8: An Introduction to Qualtrics, Room 102, Sabin Hall, Wednesday, February 8, 2017 - 12:00 pm</a></li>
+								<li>2/8: CETL Series: Working with Small Groups in the Classroom: Peer Review as a Strategy for Improving Students' Writing Process, Room 378, Rod Library, Wednesday, February 8, 2017 - 12:00 pm to 1:00 pm</li>
+								<li>2/8: Avoiding Plagiarism, Room 301, Rod Library, Wednesday, February 8, 2017 - 3:00 pm to 5:00 pm</li>
+								<li>2/8: Men's Basketball vs. Southern Illinois, McLeod Center, Wednesday, February 8, 2017 - 7:00 pm</li>
+								<li><a href="https://unialum.org/events/webinar-your-true-colors">2/8: Webinar: Your True Colors, Web (It's Online), Wednesday, February 8, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>2/8: Citizenship Film Series: Freedom Summer, Auditorium, Center for Energy and Environmental Education, Wednesday, February 8, 2017 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events">2/8: Faculty Recital: Alexander Pershounin, double bass, Davis Hall, GBPAC, Wednesday, February 8, 2017 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/9 ALL DAY: Northern Festival of Bands, Great Hall, GBPAC, Thursday, February 9, 2017 (All day) to Saturday, February 11, 2017 (All day)</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/9: Planetarium Show, Room 105, Latham Hall, Thursday, February 9, 2017 - 7:00 pm to 7:40 pm</a></li>
+								<li><a href="https://www.uni.edu/studentlife/cab">2/9: Concert: The Maine with 4 Door Theatre and The Hex Girls, Old Central Ballroom, Maucker Union, Thursday, February 9, 2017 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/planetarium-visit">2/9: Planetarium Show, Room 105, Latham Hall, Thursday, February 9, 2017 - 8:00 pm to 8:40 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events">2/10: Northern Iowa Bach Cantata Series Performance, McElroy Lobby, GBPAC, Friday, February 10, 2017 - 12:15 pm</a></li>
+								<li>2/10: UNI Women's Basketball vs. Bradley, McLeod Center, Friday, February 10, 2017 - 7:00 pm</li>
+								<li>2/10: UNI Wrestling vs. Buffalo, West Gym, Friday, February 10, 2017 - 7:00 pm</li>
+								<li>2/10: Midnight Under the Moon: ISA Valentine Dance, Old Central Ballroom, Maucker Union, Friday, February 10, 2017 - 8:00 pm</li>
+								<li><a href="https://uni.edu/theatre/">2/11: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Saturday, February 11, 2017 - 10:30 am</a></li>
+								<li><a href="https://uni.edu/theatre/">2/11: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Saturday, February 11, 2017 - 2:00 pm</a></li>
+								<li><a href="https://uni.edu/theatre/">2/12: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Sunday, February 12, 2017 - 1:00 pm</a></li>
+								<li>2/12: UNI Women's Basketball vs. Illinois State, McLeod Center, Sunday, February 12, 2017 - 2:00 pm</li>
+								<li>2/12: Art From the Heart, Old Central Ballroom, Maucker Union, Sunday, February 12, 2017 - 2:00 pm</li>
+								<li><a href="https://uni.edu/theatre/">2/12: TheatreUNI presents: Palette of Possibility, Strayer-Wood Theatre, Sunday, February 12, 2017 - 4:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
