did --todo-- . Filled in link

--- a/html_bucket_class_recaps/2-6-class-recap.html
+++ b/html_bucket_class_recaps/2-6-class-recap.html
@@ -145,7 +145,8 @@
 							<br><br>Here's a reminder that Wednesday we are in the Commons for another student services session! Check your e-mails for all the relevant info and the documents you need to print off! Or alternatively, 
 							see the last class recap <a href="2-3-class-recap.html">--HERE--.</a>
 							
-							<br><br>Also, a reminder that Tomorrow I will be leading a group to go to the community open mic event which Nick and Travis (the other cornerstone professor) will be reading at. More on that ---ToDo Here---. 
+							<br><br>Also, a reminder that Tomorrow I will be leading a group to go to the community open mic event which Nick and Travis (the other cornerstone professor) will be reading at. More on that 
+							<a href="../html_bucket_other_posts/hot-mic-night.html">--HERE--</a>. 
 							I hope to see you all there!
 							
 							<br><br>Homework for Friday: If you didn't turn in both copies of your revised story do so on Friday. If you send nick a few audio recordings from during your edit process and he can see what you decided to 
