--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 6 February 2017</span>
+                                        <span class="data">Last Updated: 12 February 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/2-10-class-recap.html">2/10/17 We talked about how to evaluate sources a bit and then discussed the results from Wednesday's student services.</a></li>
 								<li><a href="html_bucket_class_recaps/2-6-class-recap.html">2/6/17 Nick opened with a discussion on the rhetorical triangle which lead to us discussing this year's Super Bowl ads.</a></li>
 								<li><a href="html_bucket_class_recaps/2-3-class-recap.html">2/3/17 After discussing narrative you all split up into groups and shared your short stories.</a></li>
 								<li><a href="html_bucket_class_recaps/2-1-class-recap.html">2/1/17 We finished sharing research articles and discussed a few of your ideas/plans including the LifeStraw.</a></li>
